--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,13 +1,26 @@
-.navbar {
+.navbar.navbar-inverse {
   border-radius: 0;
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
   box-shadow: 0px 1px 3px #2a2a2a;
-  background: url('micro_carbon.png');
+  background: url('dark_wood.png');
 }
 
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
-  color:white;
+  color: white;
+}
+
+.hero {
+  background: url('hero1.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 370px;
+}
+
+h1, h2, h3, h4, h5, h6, .navbar.navbar-inverse {
+  margin: 0;
 }
