--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -19,8 +19,30 @@
   -o-background-size: cover;
   background-size: cover;
   height: 370px;
+  margin-top: 0px;
 }
 
-h1, h2, h3, h4, h5, h6, .navbar.navbar-inverse {
-  margin: 0;
+h1, h2, h3, h4, h5, h6, nav.navbar {
+  margin:0;
+} 
+
+.frosty {
+  background:rgba(0,0,0, 0.5);
+  color: white;
+}
+
+.frosty h1 {
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  text-shadow: rgba(0,0,0,0.95) 1px 1px;
+}
+
+.frosty h2 {
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 200;
+  text-shadow: rgba(0,0,0,0.95) 1px 1px;
+}
+
+a.btn {
+  border-radius:0;
 }
