--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -13,13 +13,13 @@
 }
 
 .hero {
-  background: url('hero1.jpg') no-repeat center center fixed;
+  background: url('hero1.jpg') no-repeat center center fixed; //css so entire photo is displayed nicely cropped like a banner
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   height: 370px;
-  margin-top: 0px;
+  box-shadow: 0px 3px 8px #2a2a2a; // [horizontal offset] [vertical offset] [blur radius] [color]
 }
 
 h1, h2, h3, h4, h5, h6, nav.navbar {
@@ -35,6 +35,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
+  text-align: center;
 }
 
 .frosty h2 {
