--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,19 @@
 <div class="hero">
 <br />
   <div class="frosty col-xs-10 col-xs-offset-1 text-center">
-    <br />
+    <div class="col-sm-4">
+      <h3>Feature 1</h3>
+    </div>
+
+    <div class="col-sm-4">
+      <h3>Feature 2</h3>
+    </div>
+
+    <div class="col-sm-4">
+      <h3>Feature 3</h3>
+    </div>
+
+    <br /><br />
     <h1>Learn Magic from the Pros</h1>
     <br />
     <h2>I'm an illusionist</h2>
