Finish landing page without custom fonts

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,4 @@
+
 .navbar.navbar-inverse {
   border-radius: 0;
   font-family: "Helvetica Neue", Helvetica;
@@ -46,4 +47,9 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 
 a.btn {
   border-radius:0;
+}
+
+.body {
+  background: url('light_grey.png');
+  font-family: "Comic Sans MS", "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
