--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,14 +1,14 @@
 
 .navbar.navbar-inverse {
   border-radius: 0;
-  font-family: "Helvetica Neue", Helvetica;
+  // font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
   box-shadow: 0px 1px 3px #2a2a2a;
   background: url('dark_wood.png');
 }
 
 .navbar-inverse a.navbar-brand {
-  font-family: "Helvetica Neue", Helvetica;
+  // font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
   color: white;
 }
@@ -33,14 +33,14 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 .frosty h1 {
-  font-family: "Helvetica Neue", Helvetica;
+  // font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
   text-align: center;
 }
 
 .frosty h2 {
-  font-family: "Helvetica Neue", Helvetica;
+  // font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
 }
@@ -49,7 +49,7 @@ a.btn {
   border-radius:0;
 }
 
-.body {
+body {
   background: url('light_grey.png');
-  font-family: "Comic Sans MS", "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
