--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,9 +1,10 @@
+<div class="booyah-box col-xs-4 col-xs-offset-1">
 <h2>Change your password</h2>
-
+<br />
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
-
+<br/>
   <div class="field">
     <%= f.label :password, "New password" %><br />
     <% if @minimum_password_length %>
@@ -11,15 +12,16 @@
     <% end %>
     <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
   </div>
-
+<br />
   <div class="field">
     <%= f.label :password_confirmation, "Confirm new password" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-
+<br />
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password", class: 'btn btn-primary' %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
