--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
+<div class="booyah-box col-xs-10 col-xs-offset-1">
 <h2>Sign up</h2>
-
+<br />
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -7,7 +8,7 @@
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
-
+  <br />
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
@@ -20,10 +21,10 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-
+  <br />
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
+<br />
 <%= render "devise/shared/links" %>
