--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<div id="wrap">
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -52,6 +53,15 @@
 <% end %>
 
 <%= yield %> 
+
+<br class="clr" />
+</div>
+<div id="footer">
+  <div class="container"> <!-- container inside footer -->
+    <b>Footer Here</b>
+    <br />
+  </div>
+</div>
 
 </body>
 </html>
