Allow course creation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,8 +58,9 @@
 </div>
 <div id="footer">
   <div class="container"> <!-- container inside footer -->
-    <b>Footer Here</b>
+    <b>Teachers</b>
     <br />
+    <%= link_to 'Teach a course', new_instructor_course_path %>
   </div>
 </div>
 
