--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,19 +28,19 @@
         <li>
          <%= link_to 'See All Courses', courses_path %>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+     <!--  <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><% link_to 'My profile',  '#' %></li>
+          <li><%= link_to 'My profile',  '#' %></li>
           <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to 'Sign in', new_user_session_path %></li>
-          <li><%= link_to 'Sign up', destroy_user_session_path %></li>
+          <li><%= link_to 'Sign up', new_user_registration_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
