--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
 <%= yield %> 
 </div>
 
-<br class="clr" />
+<div style="clear: both"></div> <!-- keeps footer at bottom" -->
 <div id="footer">
   <div class="container"> <!-- container inside footer -->
     <b>Teachers</b>
