Initial part of image upload

--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -6,6 +6,12 @@
     <%= f.input :description %>
     <%= f.input :cost %>
     <br />
+
+     <div class="modal-body">
+   <%= f.input :image %>
+      </div>
+ <div class="modal-footer">
+    <br />
     <%= f.submit "Create", class: 'btn btn-primary' %>
     <br />
   <% end %>
