--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -4,7 +4,7 @@
   <br />
     <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning pull-right' %>  
   <br class="clr" />
-
+  <%= image_tag current_course.image, class: 'img-responsive' %>
   <div class="text-center">
     <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
   </div>
