--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,13 +1,14 @@
 <br />
 
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1 class="text-center">Learn something today</h1>
+  <h1 class="text-center">Studying Pays Off</h1>
   <hr />
 
   <% @courses.each do |course| %>
-    <h2 class="text-center"><%= course.title %></h2>
-    <%= image_tag course.image, class: 'img-responsive' %>
+    <h2 class="text-center">
+      <%= link_to course.title, course_path(course) %></h2>
     <br />
+    <%= image_tag course.image, class: 'img-responsive' %>
     <div class="col-sm-8 col-xs-12">
       <%= course.description %>
     </div>
