Fix footer css styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,11 @@
 <%= yield %> 
 </div>
 
-<div style="clear: both"></div> <!-- keeps footer at bottom" -->
+
+<br class="clr" /><!-- keeps footer at bottom" -->
+
+
+
 <div id="footer">
   <div class="container"> <!-- container inside footer -->
     <b>Teachers</b>
