--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,8 +11,13 @@
     <% if current_user && current_user == @course.user %>
       <br />
       <br />
-    <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
+  
+    <% if current_user && current_user.enrolled_in?(@course) %>
+      <h3 class="label label-info">You Are Enrolled!</h3>
+    <% else %>
+      <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
     <% end %>
+
   </div>
 
   <div class="col-sm-8 col-xs-12">
@@ -38,8 +43,9 @@
           </div>
         </div>
       <% end %>
-      <br class="clr" />
+<br class="clr" />
     </div>
   <% end %>
 </div>
 </div>
+<% end %>
