Remove navbar wrap

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -17,7 +17,7 @@ body {
 }
 
 /* Wrapper for page content to push down footer */
-#wrap {
+div#wrap {
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
