--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,52 +1,4 @@
-.lesson a b {
-  font-weight: 100;
-  font-size:25px;
-}
-
-.lesson a {
-  color:white;
-  font-family: "Helvetica Neue",Helvetica;
-  font-weight:100;
-  font-size: 15px;
-}
-
-.lesson {
-  background-color:black;
-  margin-top:10px;
-  height:130px;
-}
-
-.section {
-  border: 1px solid;
-  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  padding: 20px;
-}
-
-.field_with_errors {
-  color: #ff3333;
-  background-color: #FFEEEE;
-  border-radius: 3px;
-  padding:8px;
-  margin:10px;
-}
-
-.clr {
-  clear:both;
-}
-
-.booyah-box {
-  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-  box-shadow: 1px 1px 2px 0 #d0d0d0;
-  background: #fff;
-  border: 1px solid #ccc;
-  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  padding:10px;
-}
-.booyah-box h2, .booyah-box h1 {
-  margin:10px;
-}
-.navbar.navbar-inverse {
+.navbar {
   border-radius: 0;
   // font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
@@ -55,7 +7,7 @@
 }
 
 .navbar-inverse a.navbar-brand {
-  // font-family: "Helvetica Neue", Helvetica;
+  font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
   color: white;
 }
@@ -87,16 +39,106 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 .frosty h2 {
-  // font-family: "Helvetica Neue", Helvetica;
+  font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
 }
 
-a.btn {
+.btn {
   border-radius:0;
 }
+
 
 body {
   background: url('light_grey.png');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
+
+
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding:10px;
+}
+.booyah-box h2, .booyah-box h1 {
+  margin:10px;
+}
+
+.clr {
+  clear:both;
+}
+
+.field_with_errors {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding:8px;
+  margin:10px;
+}
+
+.lesson a {
+  color:white;
+  font-family: "Helvetica Neue",Helvetica;
+  font-weight:100;
+  font-size: 15px;
+}
+
+
+.lesson a b {
+  font-weight: 100;
+  font-size:25px;
+}
+
+
+
+.lesson {
+  background-color:black;
+  margin-top:10px;
+  height:130px;
+}
+
+
+ul {
+  list-style-type: none;
+}
+
+.section-li {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+  margin: 20px;
+}
+
+// .section {
+//   border: 1px solid;
+//   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+//   padding: 20px;
+// }
+
+ul .header {
+  font-size: 25px;
+}
+
+.lessons li {
+  background:black;
+  color: white;
+  margin: 10px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding: 8px;
+  font-size: 15px;
+}
+
+.lessons li b {
+  font-size: 25px;
+  font-weight: 100;
+}
+
+.lessons li p {
+  margin: 0;
+}
+
