--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,20 +2,21 @@
 <html>
 <head>
   <title>flixter</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <link href="http://vjs.zencdn.net/5.0.0/video-js.css" rel="stylesheet">
-  <script src="http://vjs.zencdn.net/5.0.2/video.js"></script>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <link href="http://vjs.zencdn.net/5.0.0/video-js.css" rel="stylesheet">
+    <script src="http://vjs.zencdn.net/5.0.2/video.js"></script>
 </head>
+
 <body>
 
-<div id="wrap">
+<!-- <div id="wrap"> -->
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-  example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -28,26 +29,32 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li>
-         <%= link_to 'See All Courses', courses_path %>
+          <%= link_to 'See All Courses', courses_path %>
+        </li>
       </ul>
-     <!--  <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form> -->
+
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to 'My profile',  '#' %></li>
-          <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+          <li>
+            <%= link_to 'My profile',  '#' %>
+          </li>
+          <li>
+            <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+          </li>
         <% else %>
-          <li><%= link_to 'Sign in', new_user_session_path %></li>
-          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <li>
+            <%= link_to 'Sign in', new_user_session_path %>
+          </li>
+          <li>
+            <%= link_to 'Sign up', new_user_registration_path %>
+          </li>
         <% end %>
-      </ul>
+
+      </ul><!-- /.navbar-right -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+</div>
 
 <% if notice.present? %>
   <p class="alert alert-info"><%= notice %></p>
@@ -57,7 +64,7 @@
 <% end %>
 
 <%= yield %> 
-</div>
+<!-- </div> -->
 
 
 <br class="clr" /><!-- keeps footer at bottom" -->
