--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -80,6 +80,13 @@ body {
   margin:10px;
 }
 
+
+.lesson {
+  background-color:black;
+  margin-top:10px;
+  height:130px;
+}
+
 .lesson a {
   color:white;
   font-family: "Helvetica Neue",Helvetica;
@@ -95,18 +102,13 @@ body {
 
 
 
-.lesson {
-  background-color:black;
-  margin-top:10px;
-  height:130px;
-}
 
 
 ul {
   list-style-type: none;
 }
 
-.section-li {
+.section {
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
@@ -123,15 +125,15 @@ ul .header {
   font-size: 25px;
 }
 
-.lessons li {
-  background:black;
-  color: white;
-  margin: 10px;
-  font-family: "Helvetica Neue", Helvetica;
-  font-weight: 100;
-  padding: 8px;
-  font-size: 15px;
-}
+// .lesson {
+//   background:black;
+//   color: white;
+//   margin: 10px;
+//   font-family: "Helvetica Neue", Helvetica;
+//   font-weight: 100;
+//   padding: 8px;
+//   font-size: 15px;
+// }
 
 .lessons li b {
   font-size: 25px;
