--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -22,13 +22,22 @@
         <br />
 
       <!-- checks if current user enrolled and shows enroll status -->
-        <% if current_user && current_user.enrolled_in?(@course) %>
-          <br />
-          <br />
-          <h3 class="label label-info">You Are Enrolled!</h3>
-        <% else %>
+      <% if current_user && current_user.enrolled_in?(@course) %>
+         <h3 class="label label-info">You Are Enrolled!</h3>
+      <% else %>
+        <% if @course.free? %>
           <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+      <% else %>
+<!-- start stripe form -->
+        <%= form_tag course_enrollments_path(@course) do %>
+          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                    data-description="<%= @course.title %> (<%= number_to_currency @course.cost %>)"
+                    data-amount="<%= (@course.cost * 100).to_i %>"></script>
         <% end %>
+      <% end %>
+          <!-- end stripe -->
+    <% end %>
       <!-- + -->
       </div>
  <br />
