--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -51,7 +51,7 @@
   <!-- sections begin-->
   
   <div class="col-xs-12">
-    <% @course.sections.each do |section| %>
+    <% @course.sections.rank(:row_order).each do |section| %>
     <br />
     <br />
       <!-- individual section separation-->
