--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li>
-            <%= link_to 'My profile',  '#' %>
+            <%= link_to 'My Dashboard',  dashboard_path %>
           </li>
           <li>
             <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
