--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -13,21 +13,35 @@ body {
   background-color: rgba(36,32,33,0.9);
   font-family: "Helvetica Neue", Helvetica;
   padding:10px 0px;
-  margin-top:30px;
+  margin-top: 30px;
+  font-weight: 100;
 }
 
-/* Wrapper for page content to push down footer */
-div#wrap {
-  min-height: 100%;
-  height: auto;
-  /* Negative indent footer by its height */
-  margin: 0 auto -$footer-height;
-  /* Pad bottom by footer height */
-  padding: 0 0 $footer-height;
+
+
+$footer-height-mobile: 200px;
+@media (max-width: 750px) {
+  #footer {
+    height:footer-height-mobile;
+  }
+  /* Wrapper for page content to push down footer */
+  #wrap {
+    margin: 0 auto -$footer-height-mobile;
+    /* Pad bottom by footer height */
+    padding: 0 0 $footer-height;
+  }
+
+#footer .social {
+  margin-top: 10px;
 }
 
-#footer a {
-  color:white;
-  font-weight:100;
+}
+.social-button {
+  width: 32px;
+  margin: 4px;
+}
+
+.social a:hover {
+  text-decoration: none;
 }
 
