--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <body>
 
-<!-- <div id="wrap"> -->
+<div id="wrap"> 
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -64,20 +64,53 @@
 <% end %>
 
 <%= yield %> 
-<!-- </div> -->
 
+</div>  <!-- end div wrap keeps footer at bottom" -->
 
-<br class="clr" /><!-- keeps footer at bottom" -->
-
+<br class="clr" /> <!--  explicitly put up a clearing div, so we know the footer starts fresh  -->
 
 
 <div id="footer">
-  <div class="container"> <!-- container inside footer -->
-    <b>Teachers</b>
-    <br />
-    <%= link_to 'Teach a course', new_instructor_course_path %>
+  <div class="container"> 
+      <div class="col-xs-12 col-sm-3">
+      <b>Teachers</b>
+      <br />
+      <%= link_to 'Teach a course', new_instructor_course_path %>
+      <br />
+      <%= link_to 'My dashboard', dashboard_path %>
+    </div>
+
+    <div class="col-xs-12 col-sm-3">
+      <b>About</b>
+      <br />
+      <%= link_to 'Team', '#' %>
+      <br />
+       <%= link_to 'Careers', '#' %>
+      <br />
+      <%= link_to 'Privacy Policy', '#' %>
+    </div>
+
+    <div class="col-xs-12 col-sm-3">
+      <b>Contact</b>
+      <br />
+      webdevtester16@gmail.com
+      <br />
+      Cherry Tree Lane
+      <br />
+      Carmel Valley, CA 93924
+    </div>
+    <div class="col-xs-12 col-sm-3 social">
+      <b>Social</b>
+      <br />
+      <br />
+      <%= image_tag 'github.png', class: 'social-button' %>
+      <%= image_tag 'facebook.png', class: 'social-button' %>
+      <%= image_tag 'twitter.png', class: 'social-button' %>
+    </div>
+
   </div>
 </div>
+
 
 </body>
 </html>
