Add static page - privacy

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -8,18 +8,20 @@ body {
 
 /* Set the fixed height of the footer here */
 #footer {
-  height:$footer-height;
-  color:white;
-  background-color: rgba(36,32,33,0.9);
+  height: $footer-height;
+  color: white;
+  background-color: #2B1B17;
   font-family: "Helvetica Neue", Helvetica;
   padding:10px 0px;
   margin-top: 30px;
-  font-weight: 100;
+  font-weight: 200;
 }
 
+#footer a {
+ color: white;
+}
 
-
-$footer-height-mobile: 200px;
+$footer-height-mobile: auto;
 @media (max-width: 750px) {
   #footer {
     height:footer-height-mobile;
