--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -48,12 +48,10 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
   border-radius:0;
 }
 
-
 body {
   background: url('light_grey.png');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
-
 
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -101,15 +99,10 @@ body {
   font-size: 15px;
 }
 
-
 .lesson a b {
   font-weight: 100;
   font-size:25px;
 }
-
-
-
-
 
 ul {
   list-style-type: none;
@@ -122,8 +115,6 @@ ul {
   margin: 20px;
 }
 
-
-
 ul .header {
   font-size: 25px;
 }
@@ -131,16 +122,6 @@ ul .header {
 ul .header .glyphicon {
   font-size: 20px;
 }
-
-// .lesson {
-//   background:black;
-//   color: white;
-//   margin: 10px;
-//   font-family: "Helvetica Neue", Helvetica;
-//   font-weight: 100;
-//   padding: 8px;
-//   font-size: 15px;
-// }
 
 .lessons li b {
   font-size: 25px;
@@ -173,4 +154,13 @@ ul .header .glyphicon {
 .photoframe {
   padding: 50px;
   margin-right: 100px;
+}
+.Site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.Site-content {
+  flex: 1;
 }
