--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-  example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -83,9 +83,9 @@
     <div class="col-xs-12 col-sm-3">
       <b>About</b>
       <br />
-      <%= link_to 'Team', '#' %>
+      <%= link_to 'Team', team_path %>
       <br />
-       <%= link_to 'Careers', '#' %>
+       <%= link_to 'Careers', careers_path %>
       <br />
       <%= link_to 'Privacy Policy', privacy_path %>
     </div>
@@ -93,19 +93,26 @@
     <div class="col-xs-12 col-sm-3">
       <b>Contact</b>
       <br />
-      webdevtester16@gmail.com
+      <a href="mailto:helloladybread@gmail.com">helloladybread@gmail.com</a>
       <br />
       Cherry Tree Lane
       <br />
       Carmel Valley, CA 93924
     </div>
+
     <div class="col-xs-12 col-sm-3 social">
       <b>Social</b>
       <br />
       <br />
-      <%= image_tag 'github.png', class: 'social-button' %>
-      <%= image_tag 'facebook.png', class: 'social-button' %>
-      <%= image_tag 'twitter.png', class: 'social-button' %>
+      <%= link_to 'http://github.com/rosebuddy' do %>
+        <%= image_tag 'github.png', class: 'social-button' %>
+      <% end %>
+      <%= link_to 'facebook-url' do %>
+        <%= image_tag 'facebook.png', class: 'social-button' %>
+      <% end %>
+      <%= link_to 'twitter-url' do %>
+        <%= image_tag 'twitter.png', class: 'social-button' %>
+      <% end %>
     </div>
 
   </div>
