Fix mobile friendly footer

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,3 +10,4 @@
     <br /><br />
   </div>
 </div>
+<br class="clr" /> <!--  need this here to separate footer since there was no booyah box to close it out -->
