--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -15,6 +15,9 @@ body {
   padding:10px 0px;
   margin-top: 30px;
   font-weight: 200;
+  bottom: -$footer-height;
+  // position: absolute;
+  width: 100%;
 
 }
 
@@ -32,7 +35,7 @@ body {
   text-decoration: none;
 }
 
-$footer-height-mobile: 200px;
+$footer-height-mobile: auto;
 @media (max-width: 750px) {
   #footer {
     height:$footer-height-mobile;
@@ -43,7 +46,9 @@ $footer-height-mobile: 200px;
     margin: 0 auto -$footer-height-mobile; // space around (outside) the element from border outwards
     /* Pad bottom by footer height */
     padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
+
   }
+
 
   #footer .social {
     margin-top: 10px;
