Fix static page headings

--- a/app/views/static_pages/careers.html.erb
+++ b/app/views/static_pages/careers.html.erb
@@ -1,7 +1,7 @@
 <br />
 
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1>Team</h1>
+  <h1>Careers</h1>
 
   <p>
     We hire English and math teachers. Please send your full resume with credentials to <a href="mailto:helloladybread@gmail.com">helloladybread@gmail.com</a>
