--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -1,7 +1,7 @@
 <br />
 
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1>Privacy Policy</h1>
+  <h1>Team</h1>
 
   <p>
     We are some seriously awesome peeps.
