--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,7 @@
 <br />
 
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1 class="text-center">Studying Pays Off</h1>
+  <h1 class="text-center">Courses</h1>
   <hr />
 
   <% @courses.each do |course| %>
@@ -13,6 +13,7 @@
       <%= course.description %>
     </div>
     <div class="col-sm-4 col-xs-12 text-center">
+    <br/>
       <%= link_to 'More Details...', course_path(course), class: 'btn btn-primary btn-large' %>
     </div>
     <br class="clr" />
