--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,7 +1,7 @@
 .navbar {
   border-radius: 0;
-  // font-family: "Helvetica Neue", Helvetica;
-  font-weight: 200;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 250;
   box-shadow: 0px 1px 3px #2a2a2a;
   background: url('dark_wood.png');
 }
@@ -13,7 +13,7 @@
 }
 
 .hero {
-  background: url('hero1.jpg') no-repeat center center fixed; //css so entire photo is displayed nicely cropped like a banner
+  background: url('hero4.jpg') no-repeat center center fixed; //css so entire photo is displayed nicely cropped like a banner
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -32,14 +32,14 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 .frosty h1 {
-  // font-family: "Helvetica Neue", Helvetica;
-  font-weight: 100;
+  font-family: "Tondo", sans-serif;
+  font-weight: 200;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
   text-align: center;
 }
 
 .frosty h2 {
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: "Tondo", sans-serif;
   font-weight: 200;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
 }
@@ -49,8 +49,8 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 body {
-  background: url('light_grey.png');
-  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  background: url('old_moon.png');
+  font-family: "Tondo", sans-serif;
 }
 
 .booyah-box {
