--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,9 +2,9 @@
 <br />
   <div class="frosty col-xs-10 col-xs-offset-1 text-center">
     <br />
-    <h1>GRE Test Prep</h1>
+    <h1>Test Prep</h1>
     <br />
-    <h2>Video tutorials that will raise your score. Guaranteed.</h2>
+    <h2>Increase your scores. Guaranteed.</h2>
     <br />
     <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
