Change github icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,7 +105,7 @@
       <br />
       <br />
       <%= link_to 'http://github.com/rosebuddy' do %>
-        <%= image_tag 'github.png', class: 'social-button' %>
+        <%= image_tag 'github_v2.png', class: 'social-button' %>
       <% end %>
       <%= link_to 'facebook-url' do %>
         <%= image_tag 'facebook.png', class: 'social-button' %>
