--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -5,7 +5,9 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1 class="text-center"><%= @course.title %></h1>
   <hr/>
+    <div class="index-photoframe">
     <%= image_tag @course.image, class: 'img-responsive' %>
+    </div>
     <div class="col-sm-8 col-xs-12">
         <%= @course.description %>
       </div> <!-- enrollment button and course description end-->
