--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -34,8 +34,9 @@
 
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
+  <div class="index-photoframe">
   <%= image_tag current_course.image, class: 'img-responsive' %>
- 
+  </div>
   <br />
   <div class="text-center">
   <!-- Button Section trigger modal -->
