--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 .btn {
-  border-radius:0;
+  border-radius:5;
 }
 
 body {
@@ -94,8 +94,8 @@ body {
 
 .lesson a {
   color:white;
-  font-family: "Helvetica Neue",Helvetica;
-  font-weight:100;
+  font-family: "Tondo", sans-serif;
+  font-weight:110;
   font-size: 15px;
 }
 
