--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -30,7 +30,7 @@
 
       <!-- checks if current user enrolled and shows enroll status -->
     <% if current_user && current_user.enrolled_in?(@course) %>
-      <h3 class="label label-info">You Are Enrolled!</h3>
+      <h3 class="label label-info">You're Enrolled!</h3>
     <% else %>
     <% if @course.free? %>
       <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
@@ -64,9 +64,12 @@
           <div class="col-xs-12 col-sm-6">
             <div class="lesson text-center">
               <%= link_to lesson_path(lesson) do %>
+              <br/>
               <b><%= lesson.title %></b>
+              <br/>
               <br/> 
               <%= lesson.subtitle %>
+              <br/>
               <% end %>
             </div>
           </div>
