--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -49,8 +49,8 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 body {
-  background: url('old_moon.png');
-  font-family: "Tondo", sans-serif;
+  background: #f2f2f2;
+  font-family: "Tondo",Arial,"Helvetica Neue",Helvetica,sans-serif;
 }
 
 .booyah-box {
@@ -60,7 +60,7 @@ body {
   background: #fff;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  padding:10px;
+  padding:40px;
 }
 .booyah-box h2, .booyah-box h1 {
   margin:10px;
