--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,10 +1,13 @@
 <div class="hero">
-<br />
-  <div class="frosty col-xs-10 col-xs-offset-1 text-center">
+  <div class="frosty text-center">
     <br />
-    <h1>Test Prep</h1>
     <br />
-    <h2>Increase your scores. Guaranteed.</h2>
+    <br />
+    <br />
+    <br />
+    <h1>GRE Test Prep</h1>
+    <br />
+    <h2>Increase your scores, guaranteed.</h2>
     <br />
     <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
     <br /><br />
