Adjust frosty background color transparency

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,13 +104,13 @@
       <b>Social</b>
       <br />
       <br />
-      <%= link_to 'http://github.com/rosebuddy' do %>
+      <%= link_to 'http://github.com/megankbarker' do %>
         <%= image_tag 'github_v2.png', class: 'social-button' %>
       <% end %>
-      <%= link_to 'facebook-url' do %>
+      <%= link_to '#' do %>
         <%= image_tag 'facebook.png', class: 'social-button' %>
       <% end %>
-      <%= link_to 'twitter-url' do %>
+      <%= link_to '#' do %>
         <%= image_tag 'twitter.png', class: 'social-button' %>
       <% end %>
     </div>
