Adjust frosty header padding

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -57,6 +57,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
   font-weight: 350;
   text-shadow: rgba(0,0,0,0.95) 0.5px 0.5px;
   text-align: center;
+  padding-top: 125px;
 }
 
 .frosty h2 {
@@ -64,6 +65,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
   font-weight: 250;
   text-shadow: rgba(0,0,0,0.95) 0.5px 0.5px;
   text-align: center;
+  padding-bottom: 15px;
 }
 
 .btn {
