--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -209,8 +209,17 @@ p {
 
 div.col-sm-8.col-xs-12 {
   padding: 0;
+  margin-bottom: 30px;
 }
 
 div.col-sm-4.col-xs-12 {
   padding: 0;
+  margin-bottom: 30px;
+}
+
+hr {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 2px solid #eeeeee;
 }
