Add clear tags to try to fix footer not sticking

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -12,6 +12,14 @@
   color: white;
 }
 
+
+hr {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 2px solid #eeeeee;
+}
+
 h1, .h1 {
   font-size: 48px;
 }
