--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -31,7 +31,7 @@ $footer-height-mobile: 650px;
   }
 
   /* Wrapper for page content to push down footer */
-  #wrap {
+  .wrap {
     margin: 0 auto -$footer-height-mobile; // space around (outside) the element from border outwards
     /* Pad bottom by footer height */
     padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
