--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -31,12 +31,19 @@ $footer-height-mobile: 650px;
   }
 
   /* Wrapper for page content to push down footer */
-  .wrap {
-    margin: 0 auto -$footer-height-mobile; // space around (outside) the element from border outwards
-    /* Pad bottom by footer height */
-    padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
+  // .wrap {
+  //   // margin: 0 auto -$footer-height-mobile; // space around (outside) the element from border outwards
+  //   // /* Pad bottom by footer height */
+  //   // padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
 
-  }
+  // }
+  // }
+.wrap {
+    min-height: 100%;
+    height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+    height: 100%;
+    margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+}
 
   #footer .social {
     margin-top: 10px;
