Comment out wrap to test footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 
 <div class="Site-content"> 
-<div id="wrap">
+<!-- <div id="wrap"> -->
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -115,7 +115,7 @@
           <%= image_tag 'twitter.png', class: 'social-button' %>
         <% end %>
       </div>
-    </div>
+<!--     </div> -->
   </div>
 </div>
 </body>
