Replace frosty color

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 .frosty {
-  // background:rgba(100,40,97,0.15);
+  background:rgba(100,40,97,0.15);
   background-size: cover;
   color: white;
   height: 370px;
