Change background, font and html for footer wrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
     <script src="//vjs.zencdn.net/5.0.2/video.js"></script>
 </head>
 
-<body class="Site">
-
-
-<div class="Site-content">  <!-- similar to <div id="wrap"> -->
+<!-- <body class="Site"> -->
+<body/>
+<div id="wrap">
+<!-- <div class="Site-content">  --> <!-- similar to <div id="wrap"> -->
 
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
@@ -68,7 +68,7 @@
 </div> <!-- end site content aka wrap -->
 
 
-<!-- <br class="clr" />  --><!--  explicitly put up a clearing div, so we know the footer starts fresh  -->
+ <br class="clr" />  <!--  explicitly put up a clearing div, so we know the footer starts fresh  -->
 
 
   <div id="footer">
@@ -116,8 +116,8 @@
         <% end %>
       </div>
 <!--     </div> -->
-  </div> <!-- end div container -->
+  </div> <!-- end div container
 </div> <!-- end footer -->
-</div> <!-- end site content -->
+</div> <!-- end site content or wrap -->
 </body>
 </html>
