--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,10 +1,27 @@
 /* Set the fixed height of the footer here */
+$footer-height: 150px;
+
+html, body {
+  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -$footer-height;
+  /* Pad bottom by footer height */
+  padding: 0 0 $footer-height;
+}
+
+
 #footer {
+  height: $footer-height;
   color: white;
   background-color: rgba(130,130,130,0.9);
   font-family: "Helvetica Neue", Helvetica;
   padding:10px 0px;
-  margin-top: 30px;
+  margin-top: 30px !important;
   font-weight: 200;
 }
 
@@ -22,23 +39,23 @@
   text-decoration: none;
 }
 
-// $footer-height-mobile:400px;
-// @media (max-width: 750px) {
-//   #footer {
-//     height:$footer-height-mobile;
-//   }
+$footer-height-mobile:400px;
+@media (max-width: 750px) {
+  #footer {
+    height:$footer-height-mobile;
+  }
 
-//   /* Wrapper for page content to push down footer */
-//   #wrap {
-//   margin: 0 auto -$footer-height-mobile; // space around (outside) the element from border outwards
-//   /* Pad bottom by footer height */
-//   padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
-// }
+  /* Wrapper for page content to push down footer */
+  #wrap {
+  margin: 0 auto -$footer-height-mobile; // space around (outside) the element from border outwards
+  /* Pad bottom by footer height */
+  padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
+}
 
-//   #footer .social {
-//   margin-top: 10px;
-//   }
-// // }
+  #footer .social {
+  margin-top: 10px;
+  }
+}
 
 
 /* Flexbox Sticky Footer CSS */
