--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=PT+Sans);
+
 .navbar {
   border-radius: 0;
   font-family: "Helvetica Neue", Helvetica;
@@ -35,7 +37,8 @@ h2, .h2 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 370px;
+  height: 470px;
+  margin-top: 0px !important;
   //box-shadow: 0px 3px 8px #2a2a2a; // [horizontal offset] [vertical offset] [blur radius] [color]
 }
 
@@ -57,11 +60,11 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
   background:rgba(100,40,97,0.15);
   background-size: cover;
   color: white;
-  height: 370px;
+  height: 470px;
 }
 
 .frosty h1 {
-  font-family: "Tondo", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-weight: 350;
   text-shadow: rgba(0,0,0,0.95) 0.5px 0.5px;
   text-align: center;
@@ -69,7 +72,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 .frosty h2 {
-  font-family: "Tondo", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-weight: 250;
   text-shadow: rgba(0,0,0,0.95) 0.5px 0.5px;
   text-align: center;
@@ -81,7 +84,8 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 body {
-  background: rgba(223,223,223,0.95);
+  // background: rgba(223,223,223,0.95);
+  background: url('noisy_grid.png');
   font-family: "Tondo",Arial,"Helvetica Neue",Helvetica,sans-serif;
 }
 
@@ -126,7 +130,7 @@ body {
 
 .lesson a {
   color:white;
-  font-family: "Tondo", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-weight:110;
   font-size: 15px;
 }
@@ -188,15 +192,15 @@ ul .header .glyphicon {
 //   padding: 50px;
 //   margin-right: 100px;
 // }
-.Site {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
+// .Site {
+//   display: flex;
+//   min-height: 100vh;
+//   flex-direction: column;
+// }
 
-.Site-content {
-  flex: 1;
-}
+// .Site-content {
+//   flex: 1;
+// }
 
 .img-responsive {
   padding-bottom: 15px;
