Adjust devise form and font css

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -64,7 +64,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 .frosty h1 {
-  font-family: "PT Sans", sans-serif;
+  font-family: "Helvetica Neue", Helvetica;
   font-weight: 350;
   text-shadow: rgba(0,0,0,0.95) 0.5px 0.5px;
   text-align: center;
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 }
 
 .frosty h2 {
-  font-family: "PT Sans", sans-serif;
+  font-family: "Helvetica Neue", Helvetica;
   font-weight: 300;
   text-shadow: rgba(0,0,0,0.95) 0.5px 0.5px;
   text-align: center;
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 body {
   // background: rgba(223,223,223,0.95);
   background: url('noisy_grid.png');
-  font-family: "PT Sans",Arial,"Helvetica Neue",Helvetica,sans-serif;
+  font-family: "Helvetica Neue", Helvetica;
 }
 
 .booyah-box {
@@ -130,7 +130,7 @@ body {
 
 .lesson a {
   color:white;
-  font-family: "PT Sans", sans-serif;
+  font-family: "Helvetica Neue", Helvetica;
   font-weight:110;
   font-size: 15px;
 }
