--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,3 +1,5 @@
+<br />
+<div class="booyah-box col-xs-10 col-xs-offset-1">
 <h2>Resend confirmation instructions</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
@@ -14,3 +16,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
