--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
 <h2>Sign up</h2>
 <br />
@@ -23,8 +24,9 @@
   </div>
   <br />
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: 'btn btn-primary' %>
   </div>
 <% end %>
 <br />
 <%= render "devise/shared/links" %>
+</div>
